# agent-plugins-skills

./: .claudeignore  .copilot-session-plan.md  .env  .env.example  .gitignore  .nojekyll  .pyre_configuration  .swarm_state_distill_wiki.job.json  CLAUDE.md  GEMINI.md  INSTALL.md  README.md  _config.yml  bootstrap.py  diff_bridge.txt  diff_install.txt  fix_all.sh  fix_nested_symlinks.py  fix_nested_symlinks.sh  fix_plugin_relative_paths.py  fix_script_paths.py  fix_script_paths_v2.py  fix_symlinks.py  fix_symlinks_all.py  gemini-extension.json  leftover_folders.txt  link-checker-bundle-redteam-review-round2.md  local-plugins-inventory.json  missing_tools.md  plugin-sources.json  purge_plugin_installs.py  pyproject.toml  pyright_errors.txt  pyright_errors_post_install.txt  pyrightconfig.json  rlm_distill_tasks_tools.md  rlm_distill_tasks_wiki.md  scratch_symlinks_inventory.json  skills-lock.json  spec_kitty_help.txt  (+4 more)
.agents/: plugin-sync-state.json
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.kittify/: config.yaml  metadata.yaml  skills-manifest.json
.knowledge_vector_data/: chroma.sqlite3
ADRs/: 001_cross_plugin_script_dependencies.md  002_multi_skill_script_centralization.md  003_plugin_skill_resource_sharing_via_mirrored_folder_structure_and_file_level_symlinks.md  004_self_contained_plugins_no_cross_plugin_dependencies.md
agent-rules-to-add-when-needed/: AGENTS.md  coding-conventions.md  dependency-management.md  plugin-architecture.md  resources_application_documentation_policy.md  resources_business_rule_documentation_policy.md  (+17 more)
(+6350 files in other folders)
